--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,13 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+  strategy:
+  matrix:
+    jdk10:
+      jdk_version: "1.10"
+    jdk11:
+      jdk_version: "1.11"
+  maxParallel: 2
 
 steps:
 - task: NodeTool@0
@@ -19,3 +26,4 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
